--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,27 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
+# 查找必要的包
+find_package(Crow REQUIRED)
+find_package(nlohmann_json REQUIRED)
+
+# 添加可执行文件
 add_executable(zjAdventure main.cpp)
 
-target_include_directories(zjAdventure PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+# 设置包含目录
+target_include_directories(zjAdventure PRIVATE 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
 
+# 链接库
+target_link_libraries(zjAdventure PRIVATE 
+    Crow::Crow
+    nlohmann_json::nlohmann_json
+    Game
+)
+
+# 添加子目录
 add_subdirectory(src)
 
-target_link_libraries(zjAdventure PRIVATE testlib)
+# 复制前端文件到输出目录
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/web DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
