编译时复制网页文件

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,4 +34,9 @@ target_link_libraries(zjAdventure PRIVATE
 add_subdirectory(src)
 
 # 复制前端文件到输出目录
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/templates DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+add_custom_command(
+    TARGET zjAdventure POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_CURRENT_SOURCE_DIR}/web/
+    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+)
