--- a/src/Util/CMakeLists.txt
+++ b/src/Util/CMakeLists.txt
@@ -5,19 +5,21 @@ cmake_minimum_required(VERSION 3.16)
 project(Util VERSION 1.0 LANGUAGES CXX)
 
 file(GLOB_RECURSE UTIL_HEADERS "*.h")
+file(GLOB_RECURSE UTIL_SOURCES "*.cpp")
 
-# 由于只有头文件，创建一个接口库
-add_library(${PROJECT_NAME} INTERFACE)
+add_library(${PROJECT_NAME} STATIC ${UTIL_SOURCES})
 
-target_include_directories(${PROJECT_NAME} INTERFACE
+target_include_directories(${PROJECT_NAME} PUBLIC
+    ${CMAKE_SOURCE_DIR}/src
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_SOURCE_DIR}/include
 )
 
 find_package(nlohmann_json REQUIRED)
 
-target_link_libraries(${PROJECT_NAME} INTERFACE
+target_link_libraries(${PROJECT_NAME} STATIC
     nlohmann_json::nlohmann_json
+    Game
 )
 
 message(STATUS "CMAKE_SOURCE_DIR is: ${CMAKE_SOURCE_DIR}")
