--- a/src/Item/CMakeLists.txt
+++ b/src/Item/CMakeLists.txt
@@ -6,10 +6,12 @@ project(Item VERSION 1.0 LANGUAGES CXX)
 
 file(GLOB_RECURSE ITEM_SOURCES "*.cpp")
 file(GLOB_RECURSE ITEM_STATUS_SOURCES "Status/*.cpp")
+file(GLOB_RECURSE ITEM_ATTACK_SOURCES "Attack/*.cpp")
 file(GLOB_RECURSE ITEM_HEADERS "*.h")
 file(GLOB_RECURSE ITEM_STATUS_HEADERS "Status/*.h")
+file(GLOB_RECURSE ITEM_ATTACK_HEADERS "Attack/*.h")
 
-add_library(${PROJECT_NAME} STATIC ${ITEM_SOURCES} ${ITEM_STATUS_SOURCES})
+add_library(${PROJECT_NAME} STATIC ${ITEM_SOURCES} ${ITEM_STATUS_SOURCES} ${ITEM_ATTACK_SOURCES})
 
 find_package(nlohmann_json REQUIRED)
 
